--- a/bib/thesis - 2.bib
+++ b/bib/thesis - 2.bib
@@ -193,12 +193,12 @@
   LANGUAGE =         {chinese},
 }
 
-@thesis{yfz_perf,
-  author =       {杨芳洲},
-  title =        {机票个性化推荐方法},
-  school =       {上海交通大学},
-  year =         2016,
-  address =      {上海},
+@thesis{zhubajie,
+  author =       {猪八戒},
+  title =        {论流体食物的持久保存},
+  school =       {广寒宫大学},
+  year =         2005,
+  address =      {北京},
   language =     {chinese},
 }
 
