--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -1,11 +1,77 @@
 %# -*- coding: utf-8-unix -*-
 
-\chapter{机票数据分析及机票推荐基线算法}
+\chapter{机票数据分析及基线机票推荐算法}
 \label{chap:baseline}
+本章对研究用到的机票数据进行简要介绍及内容属性分析。在此分析的基础上，
+给出用户偏好模型的表示方法并根据用户的偏好进行机票个性化推荐。
+根据实验结果评估推荐算法的效果。本章的算法作为一个基线算法，是后续章节算法改进的基础与对照。
 
-\section{数据来源及特征分析}
+\section{数据来源及描述}
+本论文研究工作使用的数据由国内知名的在线票务服务商提供。数据以表的格式组织，每条数据为一张机票订单。原始数据记录中的主要字段如表\ref{tab:fields}所示。
+表格的前两项分别标识了唯一的订单以及对应的订票用户；由于国内部分城市有两个或更多个机场，所以需要标注航班的起飞机场和到达机场；舱位等级主要包括头等舱，商务舱和经济舱三个大类；飞机型号包含了飞机的大小等特征。
 
-\section{基于内容的用户偏好模型构建}
+\begin{table}[!hpb]
+  \centering
+  \bicaption[tab:fields]{字段介绍}{原始机票订单数据的字段}{Table}{Fields of 
+  Flight Data}
+  \begin{tabular}{|c|c|} \hline 
+    字段名称 & 字段描述\\ \hline
+    Order Id & 订单ID \\ \hline
+    User Id &  账户ID \\ \hline
+    Order Date & 用户订票日期 \\ \hline
+    Order Time & 用户订票时间 \\ \hline
+    Takeoff Date & 航班起飞日期 \\ \hline
+    Takeoff Time & 航班起飞时间 \\ \hline
+    Departure City & 航班起飞城市 \\ \hline
+    Arrival City & 航班落地城市 \\ \hline
+    Airline & 航班所属航空公司 \\ \hline
+    Departure Port & 航班起飞机场 \\ \hline
+    Arrival Port & 航班到达机场 \\ \hline
+    Class & 舱位等级 \\ \hline
+    Price & 机票价格 \\ \hline
+    Ticket Policy & 退改签政策 \\ \hline
+    Craft Size & 飞机型号 \\ \hline
+  \end{tabular}
+\end{table}
+
+表格中的字段表明了机票数据高度结构化的特性。机票数据的属性与书籍、电影、音乐等物品的属性不同。后者的属性通常仅作为物品分类的依据，不能直接反映物品本身的内容。而机票数据的属性则可以代表机票本身的内容，进而直接影响用户的购买决策。另外，不同于上述物品固定的静态属性，机票的价格属于动态属性，即使对于相同航班的同一等级的舱位，其票价在起飞前会发生持续变动，并且变动的幅度很大。而价格作为机票内容中相当重要的一项，会在很大程度上影响用户的选择。因此，我们不能把具有相同航班号和舱位等级但价格不同的机票当作同一个物品；
+也难以直接使用以 User-Item 矩阵表示的协同过滤类型的方法进行机票推荐。根据机票数据具备的上述特性，我们主要使用基于内容的方法进行机票推荐。
+此外，用户搜索时产出的候选机票数量约为一百左右，远低于传统推荐系统中成千上万的物品数量，但是每项候选机票都算作一个新的物品。机票个性化推荐相当于将这数百项候选机票按照用户的偏好进行个性化排序，并按照排序后的结果向用户展示。因此，我们首先需要为每位用户建立偏好模型。
+
+\section{用户偏好模型构建}
+
+用户在决策购买机票时，可能会受很多因素的影响。有些用户属于价格敏感类型，倾向于选择价格较低的机票；有些用户可能因公出差，而公司和某些航空公司有合作关系，航空公司就是这类用户的首要考虑因素；起飞时间、出发机场等属性则是和用户的个人行程安排相关。在构建用户偏好模型时，我们着重关注直接反应机票内容的特征属性。
+
+\subsection{机票数据预处理与特征选取}
+
+从表\ref{tab:fields}中可以发现，机票的特征主要分为两种类型。一种是包括机票价格、起飞时间的连续型特征，而其余的均为离散型特征。为了便于构建模型，我们将两个连续特征进行离散化。起飞时间的离散化过程比较直观，可以将时间分为上午、下午、傍晚、夜间等几个区间。而价格特征的离散化较为复杂。首先，不同航线具有不同的基准价格；其次，对于同一条航线，在距离起飞日期不同的天数，同一个价格可能代表不同的价位相对高低程度。结合实际的推荐应用场景，我们使用了如下公式作为价格指数：\\
+\begin{equation}
+	P_{KPI} = \frac{P_{std} - P_{cur}}{P_{std} - P_{low}}
+\end{equation}
+其中，$P_{std}$是该航班的经济舱全价，是航空公司给出的标准价格，变动频率很小（通常以年为单位）；$P_{cur}$是当前机票的价格，在每条订单记录中可以获取。$P_{low}$是本次搜索页面中的最低价格。
+从几项参数的含义可以看出，如果用户选择的机票价格很低，分子越大，等式的值越接近1；反之，等式的值越小，当用户选择的票价高于经济舱全价时，价格指数的值小于0。因此，价格指数越大，代表用户对票价越敏感；反之亦然。我们可以使用价格指数代表多变而重要的价格特征。并且，通过该公式计算出的价格指数与航线、距离起飞日期天数等因素无关，进而具有良好的通用性。得到价格指数后，可以结合业务领域知识将其划分为数个有代表性的区间\par
+完成对连续型特征的离散化后，我们又选取了起飞机场、到达机场（对于包含多机场城市的航线）、航空公司、舱位等级、退改签政策、飞机型号等关键特征。这些特征可以初步理解为对机票内容的概括。至此，机票的一个特征都可以表示为一个向量，该向量的每个维度代表该特征对应的每个可行的取值（区间）；每张机票也可以表示为一个向量，该向量的每个维度表示机票在每个特征的取值。用户在一个特征上的偏好可以由用户在每个取值所占的选择频数百分比来描述，选择频数可以通过用户的历史订单统计。\\
+\begin{equation}
+\label{eq:dict}
+	\mathbf{p_f} = [alternative:frequency,\dots]
+\end{equation}
+\begin{equation}
+\label{eq:pref}
+	\mathbf{P_u} = [\mathbf{p_0},\mathbf{p_1},\dots,\mathbf{p_{|f|}}]^T
+\end{equation}\par
+式\ref{eq:dict}描述了用户在一个特征上的偏好。$\mathbf{p_f}$中的每个键值对代表了特征可能的取值及该用户选择的频数百分比。
+式\ref{eq:pref}描述了用户的机票偏好模型。机票共有$|f|$个特征。$\mathbf{P_u}$中的每个向量代表了用户在机票各个特征的偏好情况。
+考虑到不同的用户可能侧重于不同的特征，在得到机票的主要特征和用户的偏好表示模型后，
+还需要为每个特征赋予权重。
+
+\subsection{机票特征权重的计算}
+
+特征的权重代表了该特征对用户的重要程度。通常，在用户更侧重的特征上，用户的偏好会更加集中。我们使用信息熵todo:cite来描述用户偏好的集中程度。信息熵的公式如下：
+\begin{equation}
+\label{eq:entropy}
+	H(\mathbf{X}) = E[-ln(P(X))] = - \sum_{i=1}^n P(x_i)lnP(X_i)
+\end{equation}\par
+
 
 \section{基于用户偏好的机票个性化推荐算法}
 
