--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -47,17 +47,17 @@
 从表\ref{tab:fields}中可以发现，机票的特征主要分为两种类型。一种是包括机票价格、起飞时间的连续型特征，而其余的均为离散型特征。为了便于构建模型，我们将两个连续特征进行离散化。起飞时间的离散化过程比较直观，可以将时间分为上午、下午、傍晚、夜间等几个区间。而价格特征的离散化较为复杂。首先，不同航线具有不同的基准价格；其次，对于同一条航线，在距离起飞日期不同的天数，同一个价格可能代表不同的价位相对高低程度。结合实际的推荐应用场景，我们使用了如下公式作为价格指数：\\
 \begin{equation}
 	P_{KPI} = \frac{P_{std} - P_{cur}}{P_{std} - P_{low}}
-\end{equation}
+\end{equation}\par
 其中，$P_{std}$是该航班的经济舱全价，是航空公司给出的标准价格，变动频率很小（通常以年为单位）；$P_{cur}$是当前机票的价格，在每条订单记录中可以获取。$P_{low}$是本次搜索页面中的最低价格。
 从几项参数的含义可以看出，如果用户选择的机票价格很低，分子越大，等式的值越接近1；反之，等式的值越小，当用户选择的票价高于经济舱全价时，价格指数的值小于0。因此，价格指数越大，代表用户对票价越敏感；反之亦然。我们可以使用价格指数代表多变而重要的价格特征。并且，通过该公式计算出的价格指数与航线、距离起飞日期天数等因素无关，进而具有良好的通用性。得到价格指数后，可以结合业务领域知识将其划分为数个有代表性的区间\par
-完成对连续型特征的离散化后，我们又选取了起飞机场、到达机场（对于包含多机场城市的航线）、航空公司、舱位等级、退改签政策、飞机型号等关键特征。这些特征可以初步理解为对机票内容的概括。至此，机票的一个特征都可以表示为一个向量，该向量的每个维度代表该特征对应的每个可行的取值（区间）；每张机票也可以表示为一个向量，该向量的每个维度表示机票在每个特征的取值。用户在一个特征上的偏好可以由用户在每个取值所占的选择频数百分比来描述，选择频数可以通过用户的历史订单统计。\\
+完成对连续型特征的离散化后，我们又选取了起飞机场、到达机场（对于包含多机场城市的航线）、航空公司、舱位等级、退改签政策、飞机型号等关键特征。这些特征可以初步理解为对机票内容的概括。至此，机票的一个特征可以表示为一个向量，该向量的每个维度代表该特征对应的每个可能的取值（区间）；用户在一个特征上的偏好可以由用户在每个可能的取值所占的选择频数百分比来描述，选择频数可以通过用户的历史订单统计。\\
 \begin{equation}
 \label{eq:dict}
 	\mathbf{p_f} = [alternative:frequency,\dots]
 \end{equation}
 \begin{equation}
 \label{eq:pref}
-	\mathbf{P_u} = [\mathbf{p_0},\mathbf{p_1},\dots,\mathbf{p_{|f|}}]^T
+	\mathbf{P_u} = [\mathbf{p_0},\mathbf{p_1},\dots,\mathbf{p_{|f|}}]
 \end{equation}\par
 式\ref{eq:dict}描述了用户在一个特征上的偏好。$\mathbf{p_f}$中的每个键值对代表了特征可能的取值及该用户选择的频数百分比。
 式\ref{eq:pref}描述了用户的机票偏好模型。机票共有$|f|$个特征。$\mathbf{P_u}$中的每个向量代表了用户在机票各个特征的偏好情况。
@@ -68,11 +68,38 @@
 
 特征的权重代表了该特征对用户的重要程度。通常，在用户更侧重的特征上，用户的偏好会更加集中。我们使用信息熵todo:cite来描述用户偏好的集中程度。信息熵的公式如下：
 \begin{equation}
-\label{eq:entropy}
-	H(\mathbf{X}) = E[-ln(P(X))] = - \sum_{i=1}^n P(x_i)lnP(X_i)
+	H(\mathbf{X}) = E[-\ln (P(X))] = - \sum_{i=1}^n P(x_i)\ln P(X_i)
 \end{equation}\par
 
+上式的含义是特征$X$所包含的信息丰富程度，$x_i$是$X$中每个维度的取值。
+注意，当某个维度的值为$0$时，根据极限定理，$0 \times \ln 0 = 0$
+当取值越集中，即用户的偏好越集中时，信息熵的值越小。当熵值达到的最小值$0$时，表明用户的偏好都集中在一个维度；反之，如果用户的偏好越分散，则熵值越大。
+当每个维度的取值相等时，熵达到最大值$\ln n$，$n$为特征的维度数目。
+因此，信息熵具有的性质可以用来计算用户在每个属性的偏好权重。为了消除特征维度的差异对熵值
+带来的影响，我们对信息熵进行归一化处理：
+\begin{equation}
+  \overline{H}(\mathbf{f}) = \frac{H(\mathbf{f})}{\ln n}
+\end{equation}
+\begin{equation}
+  W(f) = \frac{1 - \overline{H}(\mathbf{f})}{\sum_{f \in F}(1 - \overline{H}(\mathbf{f}))}
+\end{equation}\par
+$F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的偏好权重。用户在每个特征的偏好与所有特征权重构成了完整的用户偏好模型。结合由搜索产生的候选机票列表，就可以为用户进行机票个性化推荐。
 
 \section{基于用户偏好的机票个性化推荐算法}
 
+前文提到，机票个性化推荐相当于将所有候选机票按照与用户的偏好的契合度评分进行排序。因此还需要定义根据用户偏好计算候选机票评分的方法。我们将机票表示为在每个特征的取值的集合。
+\begin{equation}
+  \mathbf{f} = [0,\dots,0,1,0\dots,0]
+\end{equation}
+\begin{equation}
+  \mathbf{C} = [\mathbf{f_0},\mathbf{f_1},\dots]
+\end{equation}\par
+$\mathbf{f}$代表机票的一个特征，机票在该特征的取值对应的维度置1，其余维度均置0。 $\mathbf{C}$代表一张机票，是所有特征的集合。
+\begin{equation}
+  S = \sum_{f \in F}W_f*C_f^T*P_f
+\end{equation}
+
 \section{实验结果分析}
+
+todo:fetures of data distribution.
+todo:fetures of entropy.
