--- a/todo.txt
+++ b/todo.txt
@@ -1,19 +1,27 @@
 第三章 Baseline:
 
-对基线推荐算法需要进行引用
+这些需要引用：
+	对基线推荐算法需要进行引用
+	信息熵 概念 引用
 
-数据的分布情况分析
-
-
-信息熵 概念 引用
-
-第四章
-
-第五章
-
-第六章
+很多东西应该加到第三章，but, I can't：
+	把活跃用户的概念以及航线分布差异转移到第六章
 
 
+
+第四章 结合隐性特征的机票推荐算法
+
+
+第五章 结合共享账户的机票推荐算法
+
+
+
+第六章 机票推荐中的冷启动问题
+
+
+
+
+Daily Build:
 
 11.21
 
@@ -26,4 +34,18 @@
 词数    : 3851
 字符数  : 7591
 中文字数: 2961
+
+11.23
+词数    : 4230
+字符数  : 8010
+中文字数: 3329
+
+11.24 
+0
+
+11.25
+词数    : 6018
+字符数  : 9867
+中文字数: 5090
+
 
