--- a/tex/id.tex
+++ b/tex/id.tex
@@ -1,5 +1,5 @@
 %# -*- coding: utf-8-unix -*-
-\title{上海交通大学学位论文 }
+\title{排版先不管 }
 \author{某\quad{}某}
 \advisor{曹健}
 \defenddate{2016年12月17日}
@@ -8,7 +8,7 @@
 \studentnumber{0010900990}
 \major{某某专业}
 
-\englishtitle{A Sample Document for \LaTeX-basedd SJTU Thesis Template}
+\englishtitle{A Piece of }
 \englishauthor{\textsc{Mo Mo}}
 \englishadvisor{Prof. \textsc{Mou Mou}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
