--- a/todo.txt
+++ b/todo.txt
@@ -10,15 +10,17 @@
 
 
 第四章 结合隐性特征的机票推荐算法
-
+对节假日，或可合并进第三章
 
 第五章 结合共享账户的机票推荐算法
 
 
 
 第六章 机票推荐中的冷启动问题
+算法：权重训练实验
+时间衰减
 
-
+多样性推荐
 
 
 Daily Build:
@@ -52,6 +54,10 @@ Daily Build:
 词数    : 8555
 字符数  : 12385
 中文字数: 7628
+
+11.27
+
+
 
 
 
