--- a/todo.txt
+++ b/todo.txt
@@ -22,28 +22,15 @@
 
 多样性推荐
 
+贴图和算法
 
 Daily Build:
 
-11.21
-
-词数    : 2148
-字符数  : 5875
-中文字数: 1263
 
 11.22
-
 词数    : 3851
 字符数  : 7591
 中文字数: 2961
-
-11.23
-词数    : 4230
-字符数  : 8010
-中文字数: 3329
-
-11.24 
-0
 
 11.25
 词数    : 6018
@@ -56,8 +43,11 @@ Daily Build:
 中文字数: 7628
 
 11.27
+词数    : 10365
+字符数  : 14180
+中文字数: 9438
 
-
-
-
-
+11.28
+词数    : 12025
+字符数  : 15841
+中文字数: 11094
