--- a/todo.txt
+++ b/todo.txt
@@ -12,13 +12,16 @@
 第四章 结合隐性特征的机票推荐算法
 对节假日，或可合并进第三章
 
+
 第五章 结合共享账户的机票推荐算法
 
-
-
 第六章 机票推荐中的冷启动问题
-算法：权重训练实验
-时间衰减
+
+权重训练->分布差异、迁移
+
+时间衰减->账户变动
+
+
 
 多样性推荐
 
@@ -56,4 +59,10 @@ Daily Build:
 词数    : 14274
 字符数  : 18101
 中文字数: 13324
+
+11.30
+词数    : 16881
+字符数  : 20748
+中文字数: 15902
+
 
