--- a/todo.txt
+++ b/todo.txt
@@ -35,6 +35,9 @@ Daily Build:
 字符数  : 7591
 中文字数: 2961
 
+11.23 
+11.24   因事儿划水
+
 11.25
 词数    : 6018
 字符数  : 9867
@@ -65,4 +68,10 @@ Daily Build:
 字符数  : 20748
 中文字数: 15902
 
+12.01
+划水 800
 
+12.02
+词数    : 19788
+字符数  : 23774
+中文字数: 18776
