--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -5,6 +5,22 @@
 
 
 \section{研究背景及研究意义}
+近年来，国内的旅游业和电子商务都得到迅猛的发展，在线旅游业务同时结合了二者的特点，也逐渐走进用户的视野。国内兴起了大量的在线旅行服务企业，它们注重于将原线下旅行社的业务模式发布在线上平台，为用户提供高效、便捷的旅行产品订购体验。机票订购业务作为在线旅行票务服务企业的重要业务之一，为大量用户提供在线选购机票的业务支持。用户只需在机票订购页面输入自己的出发城市、到达城市、出发日期等出行信息，就可以检索到符合条件所有航司提供的航班，页面除了展示起降时间、航班、舱位、价格等基础信息外，还包括准点率、退改签政策等详细服务信息。在传统的机票订购业务中，用户需要自行聚合各航司的票务信息，而在线机票服务平台集合了所有航司的可以给用户提供更丰富、实时的票务信息。
+
+虽然在线机票订购业务丰富了用户的选择，但对于很多航线，展示结果往往包括上百条候选机票。这些机票一般以航班为粒度，每个航班下细分多个舱位，每个舱位对应不同的价格和退改签政策。购票网站往往只提供一些简单的筛选、排序策略，如起飞时间排序、价格排序、飞行时长排序等。为了根据偏好及出行计划选购最适合的机票，用户通常需要反复浏览、比较。一定程度上增加了用户的选择成本，降低了交互效率，也会对转化率带来影响。如果能够从众多候选机票中为用户选出最符合出行需求的机票，可以减少用户在候选机票列表页的停留时长，进一步提升用户体验，会对网站的转化率起到积极作用。
+
+本课题的主要目标是为用户从搜索产生的候选机票列表中推荐最适合用户出行需求的机票。由于机票的价格受据起飞日期时间因素的影响，并且价格的波动范围较大，而价格是用户订购机票时考虑的重要特征；同时由于机票物品具有极强的实时性，机票的数量受限于飞机的舱位数量，用户每次搜索产出的候选机票列表都不相同。因此机票推荐与一般的电影、音乐等传统物品的推荐算法有所不同。
+
+
+%tmp
+
+课题主要提出一套适合机票特性的数据预处理、分析与推荐算法模型，根据用户的历史订单和用户搜索、筛选等行为，建立用户画像并分析用户的偏好，并结合每个方案的内容属性，为用户准确、高效地产生推荐机票方案。
+本课题对如何为用户进行机票方案的个性化推荐展开研究。推荐系统自20世纪90年代诞生以来，已经广泛地应用在电子商务平台以及多媒体平台上，都取得了很好的效果，在当今信息超载的时代，推荐系统更是扮演着重要角色，因而机票个性化推荐这一问题具有重要的研究与实践意义。
+
+课题主要提出一套适合机票特性的数据预处理、分析与推荐算法模型，根据用户的历史订单和用户搜索、筛选等行为，建立用户画像并分析用户的偏好，并结合每个方案的内容属性，为用户准确、高效地产生推荐机票方案。
+本课题对如何为用户进行机票方案的个性化推荐展开研究。推荐系统自20世纪90年代诞生以来，已经广泛地应用在电子商务平台以及多媒体平台上，都取得了很好的效果，在当今信息超载的时代，推荐系统更是扮演着重要角色，因而机票个性化推荐这一问题具有重要的研究与实践意义。
+
+
 
 \section{国内外研究现状}
 \subsection{机票个性化推荐的研究现状}
