--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -179,7 +179,7 @@ $F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f
 在生产环境的部署阶段，我们首先进行一次全量的用户特征分布计算，将用户模型结构化后存储在Redis中，
 并封装成对外数据接口。随后，还会对模型进行增量更新，每天会抽取出前一天提交过订单的用户，为这部分用户更新分布情况。因此，模型后续维护的成本很小。当接受用户查询时，搜索引擎在检索候选机票的同时向数据接口发送请求以获取用户的特征分布模型。相比于上百项搜索结果，拉取特征分布模型的负载带来的影响很小，不影响用户体验。我们在前端计算每张机票的评分，并按照评分由高向低的顺序进行展示，可以灵活控制算法模型。
 
-\section{数据实验与结果分析}
+\section{数据分析及实验}
 
 \subsection{数据分布与统计}
 本节我们对推荐结果进行验证与分析。我们使用2013年1月至2015年7月的国内机票订单数据进行实验。该数据集包含了国内全部航线的直飞机票订单。有些航线如北京-上海较为热门，每天有大量旅客往返。航班也很密集；而大部分航线的航班数量都不是很多，属于非热门航班。机票订单数据呈长尾分布。考虑到机票推荐算法的实际应用场景，我们这里多采用较热门的航线，因为只有这类航线才有较多的候选机票列表。
