--- a/thesis.tex
+++ b/thesis.tex
@@ -54,6 +54,8 @@
 \include{tex/00_abstract}
 
 %% 目录、插图目录、表格目录
+\cleardoublepage
+\pdfbookmark{\contentsname}{toc}
 \tableofcontents
 \iffalse
 \listoffigures
