--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -1,6 +1,6 @@
 %# -*- coding: utf-8-unix -*-
 
-\chapter{机票数据分析及基线机票推荐算法}
+\chapter{机票数据介绍及基于特征分布的推荐算法}
 \label{chap:baseline}
 本章对研究用到的机票数据进行简要介绍及内容属性分析。在此分析的基础上，
 给出用户特征分布模型的建模方法并根据用户的特征模型进行个性化机票推荐。
@@ -88,7 +88,7 @@ $P_{cur}$是当前机票的价格，在每条订单记录中可以获取。$P_{l
   W(f) = \frac{\ln |f| - S(\mathbf{f})}{\sum_{f \in F}(\ln |f| - S(\mathbf{f}))}
 \end{equation}
 
-$F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f$代表特征$f$的维度。用户在每个特征的偏好分布与所有特征权重构成了完整的用户特征分布表示模型。结合由搜索产生的候选机票列表，就可以为用户进行个性化机票推荐。
+$F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f$代表特征$f$的维度。用户在每个特征的偏好分布与所有特征权重构成了完整的用户特征分布模型。结合由搜索产生的候选机票列表，就可以为用户进行个性化机票推荐。
 
 \section{基于用户特征分布的机票推荐算法}
 \label{sec:base_rec}
@@ -172,7 +172,7 @@ $F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f
 
 算法\ref{algo:pref_rec}是个性化机票推荐的整体流程。首先获取每个用户的特征分布，再对搜索结果
 中的每条候选机票计算评分并排序。以$C$代表机票搜索结果，$O$代表用户的历史订单，则算法复杂度是$O(|O|*|C|*\log|C|)$。其中，$|C|*\log|C|$是计算评分并排序的时间复杂度。
-我们可以离线计算并存储用户的分布表示模型，包括特征分布及特征权重，见算法\ref{algo:pref_cal}。
+我们可以离线计算并存储用户的特征分布模型，包括特征分布及特征权重，见算法\ref{algo:pref_cal}。
 那么实际使用场景中的推荐服务时间复杂度仅为$O(|C|*\log|C|)$，只与候选航班数量相关。
 因此，算法已经具备在生产环境上使用的条件。
 
@@ -245,11 +245,11 @@ MA = \frac{\sum_{i=1}^{|M|}A_{rec}(M_i)}{|M|}
  \bicaption[fig:res_pref_rec]{基线推荐结果}{四条航线推荐结果的平均准确率}{Fig}{Mean Accuracy of Recommendation on Airlines}
 \end{figure}
 
-图\ref{fig:res_pref_rec}展示了在四条测试航线上的机票推荐结果。Pre代表根据用户特征分布模型算法；pRk代表低价排序策略；hRk代表按热门程度排序策略。从实验结果可以看出基于特征分布表示模型的方法具有较高的平均准确率，代表使用这种方法对候选机票进行排序，可以使更符合用户偏好的机票排在考前的顺位。基于低价排序和机票热门程度排序这两种基础的策略平均准确率较低。从图中可以看出，两种基础的排序策略距基于特征分布模型的推荐算法有较大的差距。首先，因为这两种方法没有充分考虑用户的个性化偏好，而是基于简单的统计策略。
+图\ref{fig:res_pref_rec}展示了在四条测试航线上的机票推荐结果。Pre代表根据用户特征分布模型算法；pRk代表低价排序策略；hRk代表按热门程度排序策略。从实验结果可以看出基于特征分布模型的方法具有较高的平均准确率，代表使用这种方法对候选机票进行排序，可以使更符合用户偏好的机票排在考前的顺位。基于低价排序和机票热门程度排序这两种基础的策略平均准确率较低。从图中可以看出，两种基础的排序策略距基于特征分布模型的推荐算法有较大的差距。首先，因为这两种方法没有充分考虑用户的个性化偏好，而是基于简单的统计策略。
 其次对于低价排序策略，很多时候价格并不是影响用户购买决策的唯一因素。而对于按照热门程度排序的策略，由于机票物品的数量受限于航班的仓位数量，无法如同其它商品获取到准确的热门度。也对推荐效果造成了一定的影响。
 
 
 \section{本章小结}
-本章我们首先介绍了实验数据，并结合业务经验知识，提取机票数据的重要特征并对其中的连续特征进行预处理。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。我们根据用户历史订单数据的分析统计结果，创建了用户特征分布表示模型；又根据衡量信息丰富程度的熵值理论计算用户对每个特征的权重。从而提出了一个完整的个性化机票推荐方法。
+本章我们首先介绍了实验数据，并结合业务经验知识，提取机票数据的重要特征并对其中的连续特征进行预处理。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。我们根据用户历史订单数据的分析统计结果，创建了用户特征分布模型；又根据衡量信息丰富程度的熵值理论计算用户对每个特征的权重。从而提出了一个完整的个性化机票推荐方法。
 
 在数据实验阶段，我们提取了几条热门航线，分析了用户、订单的分布情况。对比了基于特征分布模型的推荐算法以及两种基础的推荐策略在实验数据集上的效果。证实了结合用户偏好的推荐比基于策略推荐有很大的提升。在接下来的几章里，我们将以此方法作为基线推荐算法，细化应用场景，深入研究，以进一步提升推荐算法的准确率。
