--- a/tex/04_latent.tex
+++ b/tex/04_latent.tex
@@ -180,7 +180,7 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 
 \section{本章小结}
 
-本章我们研究了用户在不同起飞日期的行为变化对个性化机票推荐准确率带来的影响。我们将测试订单进行分组，并使用实验验证了节假日的机票推荐准确率低于周末及工作日。为了使模型能够反映用户的行为变化，我们为机票的显性内容增加了起飞时间类型这一特征，并建立了转换矩阵将用户特征分布模型和机票内容都映射到隐性空间。定义了基于成对模型的目标函数，并使用梯度下降法进行参数推导。在取样构建成对关系的过程中，我们提出了基于偏好排序的抽样方法。最后一节的实验结果证实，结合结合隐性特征的用户模型可以反映出用户在节假日的行为变化以及显性特征之间的联系，提升个性化机票推荐效果。
+本章我们研究了用户在不同起飞日期的行为变化对个性化机票推荐准确率带来的影响。我们将测试订单进行分组，并使用实验验证了节假日的机票推荐准确率低于周末及工作日。为了使模型能够反映用户的行为变化，我们为机票的显性内容增加了起飞时间类型这一特征，并建立了转换矩阵将用户特征分布模型和机票内容都映射到隐性空间。定义了基于成对模型的目标函数，并使用梯度下降法进行参数推导。在取样构建成对关系的过程中，我们提出了基于偏好排序的抽样方法。最后一节的实验结果证实，结合隐性特征的用户模型可以反映出用户在节假日的行为变化以及显性特征之间的联系，提升个性化机票推荐效果。
 
 
 
