--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -28,7 +28,7 @@
 
 航班推荐引擎(Flight Recommender Engine, FRE)是Amadeus公司开发的一套系统，主要功能是为用户推荐合适的航班。系统充分利用了领域知识，将航班的属性抽取出26个维度，使用加权的欧氏距离衡量航班的相似性。系统将用户的出发地、到达地和时间作为限制条件，从数据库中选取与用户条件距离最小的N条数据作为推荐结果展示给用户。
 
-与此相关，在旅游方案领域的推荐也有很多学术研究成果。旅游方案推荐主要使用基于内容的方法，对机票推荐也有很大的借鉴作用。一项对Tripadvisor网站数据的研究对基于内容的推荐提出了一些创新。通常，基于内容的方法都需要对内容进行过滤，只选出与该次推荐上下文内匹配的内容，如果内容的维度越高，推荐结果数据的稀疏度越高，会影响推荐的准确度。在这项研究中采用了内容松弛的方法，即降低对推荐结果的内容约束，只提取几个维度的关键内容，同时将这些关键内容约束应用于基于用户的协同过滤的步骤，提出一种新型混合推荐方法，实验效果比单一的基于内容推荐有所提升。
+与此相关，在旅游方案领域的推荐也有很多学术研究成果。旅游方案推荐主要使用基于内容的方法，对机票推荐也有很大的借鉴作用。一项对Tripadvisor\footnote{\url{www.tripadvisor.com}}网站数据的研究对基于内容的推荐提出了一些创新。通常，基于内容的方法都需要对内容进行过滤，只选出与该次推荐上下文内匹配的内容，如果内容的维度越高，推荐结果数据的稀疏度越高，会影响推荐的准确度。在这项研究中采用了内容松弛的方法，即降低对推荐结果的内容约束，只提取几个维度的关键内容，同时将这些关键内容约束应用于基于用户的协同过滤的步骤，提出一种新型混合推荐方法，实验效果比单一的基于内容推荐有所提升。
 
 在工业界，个性化机票推荐也得到了广泛的应用。例如携程网\footnote{\url{www.ctrip.com}}、Bookairfare\footnote{\url{www.bookairfare.com}}、AirFareExperts\footnote{\url{www.airfareexperts.com}}等。其中，我们使用携程网主要进行国内机票预定，而使用Bookairfare、AirFareExperts网站往往需要出境、转机。携程网通过分析用户历史订单以及用户年龄、性别、位置等信息，为用户建立画像模型，并展现个性化的置顶推荐航班，取得了良好的效果。除此之外，携程网还上线了接送机、机加铁、wifi、酒店等以机票为中心的一系列跨领域推荐。Bookairfare、AirFareExperts网站则结合用户的地理位置、时间等约束条件，为用户推荐最合理的出行周转方案。
 
