--- a/todo.txt
+++ b/todo.txt
@@ -90,3 +90,14 @@ Daily Build:
 词数    : 28770
 字符数  : 32989
 中文字数: 27654
+
+12.11
+词数    : 34084
+字符数  : 38491
+中文字数: 32932
+
+12.13
+词数    : 35308
+字符数  : 39715
+中文字数: 34156
+
